Fix spacing and responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,6 @@ html {
   filter: invert(100%);
 }
 
-/* html { font-size: calc(1em + 1vw); } */
-
 .body {
   /* background: #ffe7a0 */
   background: #181818;
@@ -91,10 +89,6 @@ html {
 
 .card-wrapper {
   padding: 35px 35px 35px 35px;
-}
-
-.card {
-  margin-top: 50px;
 }
 
 .btn {
